matrices cov qui marchent pas

--- a/AFD.Rmd
+++ b/AFD.Rmd
@@ -5,11 +5,17 @@ output: html_document
 
 ## Partie 1
 
+*Librairies utilisées
+
+````{r}
+library(formattable)
+library(rstatix)
+````
+
 * Importation des données
 
 ```{r}
 rm(list = ls())
-library(formattable)
 df  <- read.table('VIN_QUALITE.txt', header = T)
 head(df)
 ```
@@ -32,7 +38,16 @@ colMeans(df_change)
 aggregate(df[, 1:4], list(df$Quality), mean)
 ````
 * Matrice des Variances - Covariances par classes
-
+  *bad
 ````{r}
+df_bad <- df%>%filter(Quality=="bad")
+df_bad <- df_bad[, ! names(df_bad) %in% quality, drop = F]
+cov(df_bad)
+````
 
+*medim
+```{r}
+df_med <- df%>%filter(Quality=="medium")
+df_med <- df_med[, ! names(df_med) %in% quality, drop = F]
+cov(df_med)
 ````
