--- a/AFD.Rmd
+++ b/AFD.Rmd
@@ -18,6 +18,7 @@ library(rstatix)
 rm(list = ls())
 df  <- read.table('VIN_QUALITE.txt', header = T)
 df$Quality <- as.factor(df$Quality)
+N <- nrow(df)
 head(df)
 ```
 * On supprimme d'abord la colonne QUALITY pour pourvoir calculer les moyennes
@@ -37,7 +38,7 @@ head(MoyVar)
 
 ````{r}
 MoyVarClass <- aggregate(df[, 1:4], list(df$Quality), mean)
-head(MoyVarClass)
+MoyVarClass
 ````
 * Matrice des Variances - Covariances par classes
 
@@ -65,7 +66,7 @@ covM
 ```{r}
 df_good <- df%>%filter(Quality=="good")
 df_good <- df_good[, ! names(df_good) %in% "Quality", drop = F]
-covG <- cov(df_good)
+covG <- cov(df_good)*((N-1)/N)
 covG
 ````
 
@@ -74,20 +75,54 @@ Pour la réalisation de notre future fonction "générique" pouvant accepter dif
 ````{r}
 L1 <- lapply(levels(df$Quality),function(x){
   return(list(
-    'data' = subset(df,Quality==x),
-    'MoyVar' = colMeans(df[, ! names(df) %in% "Quality", drop = F]),
-    'MoyVarClass' = aggregate(df[, 1:ncol(df)-1], list(df$Quality), mean),
-    'CovClass' = cov(subset(df,Quality ==x)[, ! names(df)%in% "Quality", drop = F])
-    )
-    )
-  }
+    'CovClass' = cov(subset(df,Quality ==x)[, ! names(df)%in% "Quality", drop = F])*((N-1)/N),
+    'nrow' = nrow(subset(df,Quality ==x))
   )
+  )
+}
+)
 k <- length(levels(df$Quality))
 L <- list()
 
 for (i in 1:k){
   nom <- paste0('G', i)
-  L[nom] <- setNames(L1,nom)
+  L[nom] <- setNames(L1[i],nom)
 }
 L
+````
+* Calcul des inerties : 
+
+  * Calcul de l'inertie Intra (W) 
+````{r}
+
+# W <- list()
+# for (i in 1:length(L)){
+#   W <- (1/N)*sum((L[[i]]$nrow*(L[[i]]$CovClass)))
+# }
+# W
+
+W <- (1/N)*((L[[1]]$nrow*(L[[1]]$CovClass))+(L[[2]]$nrow*(L[[2]]$CovClass))+(L[[3]]$nrow*(L[[3]]$CovClass)))
+W
+````
+* Calcul des inerties : 
+
+  * Calcul de l'inertie Inter (B) 
+````{r}
+B <- (1/N)*((L[[1]]$nrow*(as.matrix(MoyVarClass[,-1]-MoyVar))%*%t(as.matrix(MoyVarClass[,-1]-MoyVar)))+(L[[2]]$nrow*(as.matrix(MoyVarClass[,-1]-MoyVar))%*%t(as.matrix(MoyVarClass[,-1]-MoyVar)))+(L[[3]]$nrow*(as.matrix(MoyVarClass[,-1]-MoyVar))%*%t(as.matrix(MoyVarClass[,-1]-MoyVar))))
+B
+
+````
+* Calcul des inerties : 
+
+  * Calcul de l'inertie Totale (I)
+````{r}
+# I <- W+B
+# I
+````
+* Diagonalisation
+
+  * 
+````{r}
+# B <- 
+# B
 ````
