--- a/AFD.Rmd
+++ b/AFD.Rmd
@@ -17,21 +17,21 @@ library(rstatix)
 ```{r}
 rm(list = ls())
 df  <- read.table('VIN_QUALITE.txt', header = T)
-df$Quality <- as.factor(df$Quality)
+df$Quality <- factor(df$Quality)
 N <- nrow(df)
 head(df)
 ```
 * On supprimme d'abord la colonne QUALITY pour pourvoir calculer les moyennes
 
 ```{r}
-df_change <- df[, ! names(df) %in% "Quality", drop = F]
-head(df_change)
+# df_change <- df[, ! names(df) %in% "Quality", drop = F]
+# head(df_change)
 ```
 
 * Moyenne des variables
 
 ````{r}
-MoyVar <- colMeans(df_change)
+MoyVar <- colMeans(df[,1:4])
 MoyVar
 ````
 * Moyennes de variables par classe
@@ -42,54 +42,27 @@ format_table(MoyVarClass)
 ````
 * Matrice des Variances - Covariances par classes
 
-  * bad
 ````{r}
-#N=length(df_bad)
-df_bad <- df%>%filter(Quality=="bad")
-df_bad <- df_bad[, ! names(df_bad) %in% "Quality", drop = F]
-covB <- cov(df_bad)*((N-1)/N)
-covB
-````
-* Matrice des Variances - Covariances par classes
+Df_C <- split(df[,1:4],df$Quality)
 
-  * medium
-```{r}
-df_med <- df%>%filter(Quality=="medium")
-df_med <- df_med[, ! names(df_med) %in% "Quality", drop = F]
-covM <- cov(df_med)*((N-1)/N)
-covM
-````
-* Matrice des Variances - Covariances par classes
-
-  * good
-
-```{r}
-df_good <- df%>%filter(Quality=="good")
-df_good <- df_good[, ! names(df_good) %in% "Quality", drop = F]
-covG <- cov(df_good)*((N-1)/N)
-covG
-````
-
-Pour la réalisation de notre future fonction "générique" pouvant accepter différents dataframe, on utilise cette méthode pour créer une liste comprenant les variables voulues:
-
-````{r}
-L1 <- lapply(levels(df$Quality),function(x){
+L <- lapply(Df_C,
+  function(x){
   return(list(
-    'CovClass' = cov(subset(df,Quality ==x)[, ! names(df)%in% "Quality", drop = F])*((N-1)/N),
-    'nrow' = nrow(subset(df,Quality ==x))
+    'CovClass' = var(x)*((nrow(x)-1)/nrow(x)),
+    'nrow' = nrow(x),
+    'mean' = list(
+                  TP=mean(x$TP),
+                  Sun=mean(x$Sun),
+                  Heat=mean(x$Heat),
+                  Rain=mean(x$Rain))
   )
   )
 }
 )
-k <- length(levels(df$Quality))
-L <- list()
-
-for (i in 1:k){
-  nom <- paste0('G', i)
-  L[nom] <- setNames(L1[i],nom)
-}
 L
+
 ````
+
 * Calcul des inerties : 
 
   * Calcul de l'inertie Intra (W) 
@@ -101,14 +74,15 @@ L
 # }
 # W
 
-W <- (1/N)*((L[[1]]$nrow*(L[[1]]$CovClass))+(L[[2]]$nrow*(L[[2]]$CovClass))+(L[[3]]$nrow*(L[[3]]$CovClass)))
+W <- (1/N)*((L$bad$nrow*(L$bad$CovClass))+(L$good$nrow*(L$good$CovClass))+(L$medium$nrow*(L$medium$CovClass)))
 W
 ````
 * Calcul des inerties : 
 
   * Calcul de l'inertie Inter (B) 
 ````{r}
-B <- (1/N)*((L[[1]]$nrow*(as.matrix(MoyVarClass[,-1]-MoyVar))%*%t(as.matrix(MoyVarClass[,-1]-MoyVar)))+(L[[2]]$nrow*(as.matrix(MoyVarClass[,-1]-MoyVar))%*%t(as.matrix(MoyVarClass[,-1]-MoyVar)))+(L[[3]]$nrow*(as.matrix(MoyVarClass[,-1]-MoyVar))%*%t(as.matrix(MoyVarClass[,-1]-MoyVar))))
+B <- (1/N)*((L$bad$nrow*(unlist(L$bad$mean)-unlist(MoyVar))%*%t(unlist(L$bad$mean)-unlist(MoyVar)))+(L$good$nrow*(unlist(L$good$mean)- unlist(MoyVar))%*%t(unlist(L$good$mean)-unlist(MoyVar)))+(L$medium$nrow*(unlist(L$medium$mean)-unlist(MoyVar))%*%t(unlist(L$medium$mean)- unlist(MoyVar))))
+
 B
 
 ````
@@ -116,13 +90,54 @@ B
 
   * Calcul de l'inertie Totale (I)
 ````{r}
-# I <- W+B
-# I
+I <- W+B
+I
 ````
 * Diagonalisation
 
-  * 
+  * Methode de Fisher
 ````{r}
-# B <- 
-# B
+k <- 3
+p <- 4
+Bp <- N/(k-1)*B
+Bp
+Wp <- N/(N-k)*W
+Wp
+````
+
+````{r}
+BW <- Bp%*%solve(Wp)
+dBw <- eigen(BW)
+U <- Re(dBw$vectors)[,1:2]
+normes <- sqrt(diag(t(U)%*%W%*%U))
+
+VecP <- sweep(U,2,normes,"/")
+VecPf <- VecP
+rownames(VecPf)=c("TP","Sun","Heat","Rain")
+colnames(VecPf)=c("Axe_1","Axe_2")
+
+
+ValP <- matrix(Re(dBw$values)[1:2],2,1)
+ValPf <- ValP
+colnames(ValPf)=c("valeurs_propres")
+rownames(ValPf)=c("Axe_1","Axe_2")
+
+#petit p = 4
+````
+
+````{r}
+inertie <- ValP/sum(ValP)*100
+cor <- sqrt(ValP/(1+ValP))
+Wilks <- (1-cor^2)
+Kh2 <- -(N - (p+k)/2 -1)*log(Wilks)
+res <- matrix(c(ValP,inertie,cor,Wilks,Kh2),2,5)
+colnames(res)=c("valeur propres","% inertie","correlation","Wilks","Kh Deux")
+rownames(res)= c("u1","u2")
+
+````
+
+## Partie 2
+
+````{r}
+library(ggplot2)
 ````
